# llm-rs

./: Cargo.toml  README.md
llm-rs/: Cargo.toml
llm-rs/src/: blob.rs  context.rs  main.rs  optimizer.rs  vm.rs
llm-rs/src/llmc/: data_loader.rs  mod.rs  tokenizer.rs
llm-rs/src/nn/: attention.rs  embedding.rs  gelu.rs  gpt2.rs  gpt2_blk.rs  layer_norm.rs  linear.rs  loss.rs  mod.rs
llm-rs/src/op/: add.rs  attention.rs  embedding.rs  gelu.rs  gemm.rs  layer_norm.rs  linear.rs  loss.rs  mod.rs  rearrange.rs
rw-rc/: Cargo.toml
rw-rc/src/: lib.rs
src/: data_loader.rs  fmt.rs  kernel.rs  main.rs  tensor.rs  tokenizer.rs
tensor/: Cargo.toml
tensor/src/: fmt.rs  host.rs  lib.rs  transform.rs
