[package]
name = "llm-rs"
version = "0.0.0"
edition.workspace = true
authors = ["YdrMaster <ydrml@hotmail.com>"]

[dependencies]
rw-rc.path = "../rw-rc"
tensor.path = "../tensor"

digit-layout = "0.3"
mem-rearrange = "0.1"
itertools = "0.14"
gemm = "0.18"
rayon = "1.10"

memmap2 = "0.9"
globset = "0.4"
rand = "0.9"
